Mapping template for User.matchStatus

--- a/real-main/serverless/mapping-templates/user.yml
+++ b/real-main/serverless/mapping-templates/user.yml
@@ -230,6 +230,10 @@
   response: PassThru.response.vtl
 
 - type: User
+  field: matchStatus
+  dataSource: DynamodbMatchesDataSource
+
+- type: User
   field: matchedUsers
   dataSource: DynamodbMatchesDataSource
 
